--- a/src/data/package.json
+++ b/src/data/package.json
@@ -10,11 +10,15 @@
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
     "newrelic": "^1.26.0",
     "njwt": "^0.2.3",
+    "pg": "^4.5.3",
+    "pg-hstore": "^2.3.2",
     "redis": "^2.6.0-1",
     "request": "^2.69.0",
     "requestify": "^0.1.17",
+    "sequelize": "^3.21.0",
     "soap": "^0.12.0"
   },
   "devDependencies": {
