--- a/src/data/tsconfig.json
+++ b/src/data/tsconfig.json
@@ -5,6 +5,7 @@
         "sourceMap": true,
         "declaration": false,
         "experimentalDecorators": true,
+        "noImplicitAny": false,
         "watch": true
     },
     "exclude": [
