--- a/src/api/config/config.json
+++ b/src/api/config/config.json
@@ -7,7 +7,9 @@
 	    "name" 	   : "idsp",
 	    "port"     : 5432
   	},
-	"tokenkey" : "J@karta",
-  	"serviceURL" : "http://127:0:0:1/service/"
+    "service" : {
+      "key" : "J@karta",
+      "serviceURL" : "http://127:0:0:1/service/"
+    }
   }
 }
