add grunt for api

--- a/src/api/config/config.json
+++ b/src/api/config/config.json
@@ -14,6 +14,10 @@
           "idle" : 10000
       }
   	},
+    "model" : {
+        "dir" : "model",
+        "naming" : ".model.js"
+    },
     "service" : {
       "key" : "J@karta",
       "serviceURL" : "http://127:0:0:1/service/"
