--- a/src/api/package.json
+++ b/src/api/package.json
@@ -2,15 +2,17 @@
   "name": "api",
   "version": "0.0.1",
   "description": "idsp data access",
-  "main": "src/rest/main.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node src/rest/main.js"
+    "start": "node main.js"
   },
   "dependencies": {
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "form-data": "^1.0.0-rc4",
     "jsonwebtoken": "^5.7.0",
+    "mime": "^1.3.4",
     "newrelic": "^1.26.0",
     "njwt": "^0.2.3",
     "pg": "^4.5.3",
@@ -23,8 +25,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-typescript": "^0.8.0"
-  },
-  "author": "Erik van de Ven",
-  "license": "ISC"
+    "grunt-ts": "^5.3.2",
+    "load-grunt-tasks": "^3.2.0"
+  }
 }
