Add master table migration script and models

--- a/src/api/config/config.json.example
+++ b/src/api/config/config.json.example
@@ -15,8 +15,8 @@
       }
   	},
     "model" : {
-        "dir" : "model",
-        "naming" : ".model.js"
+        "dir" : "models",
+        "naming" : ".js"
     },
     "service" : {
       "key" : "J@karta",
