--- a/src/api/package.json
+++ b/src/api/package.json
@@ -21,6 +21,7 @@
     "request": "^2.69.0",
     "requestify": "^0.1.17",
     "sequelize": "^3.21.0",
+    "sequelize-cli": "^2.4.0",
     "soap": "^0.12.0"
   },
   "devDependencies": {
