--- a/src/api/config/config.json.example
+++ b/src/api/config/config.json.example
@@ -4,9 +4,9 @@
       "dialect"  : "postgres",
       "host"     : "localhost",
       "schema"   : "public",
-  		"username" : "root",
-	  	"password" : "",
-	    "name" 	   : "idsp",
+  		"username" : "postgres",
+	  	"password" : "password",
+	    "name" 	   : "public",
 	    "port"     : 5432,
       "pool"     : {
           "min"  : 0,
@@ -14,10 +14,6 @@
           "idle" : 10000
       }
   	},
-    "model" : {
-        "dir" : "models",
-        "naming" : ".js"
-    },
     "service" : {
       "key" : "J@karta",
       "serviceURL" : "http://127:0:0:1/service/"
