--- a/src/api/package.json
+++ b/src/api/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "faker": "^3.1.0",
     "form-data": "^1.0.0-rc4",
     "jsonwebtoken": "^5.7.0",
     "mime": "^1.3.4",
@@ -17,6 +18,7 @@
     "njwt": "^0.2.3",
     "pg": "^4.5.3",
     "pg-hstore": "^2.3.2",
+    "promise": "^7.1.1",
     "redis": "^2.6.0-1",
     "request": "^2.69.0",
     "requestify": "^0.1.17",
