--- a/src/app/package.json
+++ b/src/app/package.json
@@ -37,12 +37,14 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
     "grunt-ts": "^5.3.2",
+    "grunt-tslint": "^3.1.0",
     "grunt-usemin": "^3.1.1",
     "grunt-webpack": "^1.0.11",
     "jshint-stylish": "^2.0.1",
     "lite-server": "^2.1.1",
     "load-grunt-tasks": "^3.2.0",
     "ts-loader": "^0.8.1",
+    "tslint": "^3.10.2",
     "typescript": "^1.8.9",
     "typings": "^0.7.11",
     "webpack": "^1.12.13",
