--- a/src/api/config/config.json.example
+++ b/src/api/config/config.json.example
@@ -1,19 +1,48 @@
 {
   "development": {
-      "db" : {
+    "db" : {
       "dialect"  : "postgres",
       "host"     : "localhost",
       "schema"   : "public",
-          "username" : "postgres",
-          "password" : "password",
-        "name"        : "public",
-        "port"     : 5432,
+      "username" : "postgres",
+      "password" : "admin",
+      "name"     : "idsp",
+      "port"     : 5432,
+      "timezone" : "+08:00",
       "pool"     : {
           "min"  : 0,
           "max"  : 5,
           "idle" : 10000
       }
-      },
+    },
+    "model" : {
+        "dir" : "models",
+        "naming" : ".js"
+    },
+    "service" : {
+      "key" : "J@karta",
+      "serviceURL" : "http://127:0:0:1/service/"
+    }
+  },
+  "production":{
+    "db" : {
+      "dialect"  : "postgres",
+      "host"     : "localhost",
+      "schema"   : "public",
+      "username" : "postgres",
+      "password" : "admin",
+      "name"     : "idsp",
+      "port"     : 5432,
+      "pool"     : {
+          "min"  : 0,
+          "max"  : 5,
+          "idle" : 10000
+      }
+    },
+    "model" : {
+        "dir" : "models",
+        "naming" : ".js"
+    },
     "service" : {
       "key" : "J@karta",
       "serviceURL" : "http://127:0:0:1/service/"
