--- a/src/api/package.json
+++ b/src/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "cookie-parser": "^1.4.1",
+    "cron": "^1.1.0",
     "express": "^4.13.4",
     "faker": "^3.1.0",
     "form-data": "^1.0.0-rc4",
