--- a/src/api/config/config.json.example
+++ b/src/api/config/config.json.example
@@ -21,10 +21,11 @@
     },
     "service" : {
       "OPIS+" : "http://localhost:7777",
-      "ELP" : "http://localhost:7777", 
+      "ELP" : "http://localhost:7777",
       "key" : "J@karta",
-      "serviceURL" : "http://127:0:0:1/service/"
-    }
+      "timeout" : 15000,
+      "port" : 8080
+    },
   },
   "production":{
     "db" : {
@@ -47,7 +48,8 @@
     },
     "service" : {
       "key" : "J@karta",
-      "serviceURL" : "http://127:0:0:1/service/"
-    }
+      "serviceURL" : "http://127:0:0:1/service/",
+      "port" : 8080
+    },
   }
 }
