--- a/src/app/package.json
+++ b/src/app/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.14",
+    "crypto-js": "^3.1.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "express": "^4.13.4",
