--- a/src/api/Procfile
+++ b/src/api/Procfile
@@ -1,1 +1,1 @@
-web: npm install && ./node_modules/.bin/typings install && ./node_modules/.bin/tsc && node main.js
+web: npm install && npm install -g typings && typings install && ./node_modules/.bin/tsc && node main.js
