--- a/src/api/package.json
+++ b/src/api/package.json
@@ -25,6 +25,7 @@
     "redis": "^2.6.0-1",
     "request": "^2.69.0",
     "requestify": "^0.1.17",
+    "requirejs": "^2.2.0",
     "sequelize": "^3.23.1",
     "sequelize-cli": "^2.4.0",
     "soap": "^0.12.0"
