--- a/src/api/Procfile
+++ b/src/api/Procfile
@@ -1,1 +1,1 @@
-web: node main.js
+web: npm install && npm install -g typings@0.8.1 typescript && typings install && /app/.heroku/node/lib/node_modules/typings/node_modules/.bin/tsc && node_modules\.bin\sequelize.cmd db:migrate --env heroku --config config\migrate.json && node main.js
